[gd_scene load_steps=13 format=3 uid="uid://bqej3kpl3fx7w"]

[ext_resource type="PackedScene" uid="uid://cjvqk1d0ebx55" path="res://common/atoms/debug_mode/debug_mode.tscn" id="1_u50vr"]
[ext_resource type="PackedScene" uid="uid://ju7maq1qeu40" path="res://common/molecules/background.tscn" id="2_4tckr"]
[ext_resource type="PackedScene" uid="uid://dllc5jfk53p86" path="res://common/molecules/background_animated/background_animated.tscn" id="2_y501k"]
[ext_resource type="Theme" uid="uid://c02k6aerkrk2u" path="res://common/atoms/theme.tres" id="4_1r6k0"]
[ext_resource type="Script" path="res://game-specific/game_30/game_30.gd" id="4_pri04"]
[ext_resource type="PackedScene" uid="uid://bg57vt571tkxo" path="res://common/atoms/clickable/clickable.tscn" id="5_mxpw4"]
[ext_resource type="AudioStream" uid="uid://rp7b4lyer7li" path="res://assets/sfx/success.ogg" id="7_1a7hj"]
[ext_resource type="PackedScene" uid="uid://44jxk1dbqlpb" path="res://common/atoms/effect_transition/effect_transition.tscn" id="7_jkg2f"]
[ext_resource type="PackedScene" uid="uid://bm8s5tu35rfnt" path="res://common/atoms/highlight/highlight.tscn" id="7_okbwg"]
[ext_resource type="AudioStream" uid="uid://c14by7k5l2tj1" path="res://assets/sfx/projectile_spawn.ogg" id="8_8kbni"]
[ext_resource type="AudioStream" uid="uid://uab6k4wyov1f" path="res://assets/sfx/wrong.ogg" id="9_n6vel"]
[ext_resource type="PackedScene" uid="uid://cdo5hamcxy2ol" path="res://common/molecules/win_screen/win_screen.tscn" id="15_f3ob4"]

[node name="Root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
metadata/_edit_lock_ = true

[node name="DEBUG_MODE" parent="." instance=ExtResource("1_u50vr")]
visible = false

[node name="BackgroundAnimated" parent="." instance=ExtResource("2_y501k")]
z_index = -3
layout_mode = 1
speed = 1.5

[node name="Background" parent="." instance=ExtResource("2_4tckr")]
modulate = Color(1, 1, 1, 0.560784)
z_index = -2
layout_mode = 1

[node name="Game 30" type="Node" parent="." node_paths=PackedStringArray("answers")]
script = ExtResource("4_pri04")
answers = [NodePath("../VBoxContainer/HBoxContainer/Answer1"), NodePath("../VBoxContainer/HBoxContainer/Answer2"), NodePath("../VBoxContainer/HBoxContainer/Answer3")]

[node name="SoundWon" type="AudioStreamPlayer" parent="Game 30"]
stream = ExtResource("7_1a7hj")
volume_db = -10.0
pitch_scale = 1.6

[node name="SoundLost" type="AudioStreamPlayer" parent="Game 30"]
stream = ExtResource("9_n6vel")
volume_db = -4.0
pitch_scale = 0.8

[node name="SoundQuestion" type="AudioStreamPlayer" parent="Game 30"]
stream = ExtResource("8_8kbni")
volume_db = -9.0

[node name="Flasher" type="ColorRect" parent="."]
modulate = Color(0.24, 0.4, 0.24, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EffectTransition" parent="Flasher" instance=ExtResource("7_jkg2f")]

[node name="QuestionCounter" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 10.0
offset_bottom = 44.0
grow_horizontal = 2
theme = ExtResource("4_1r6k0")
theme_override_font_sizes/font_size = 28
text = "Question 1/20"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 70
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 24

[node name="Question" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("4_1r6k0")
theme_override_font_sizes/font_size = 50
text = "The marathon consisted of how many games? The marathon consisted of how many games?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Highlight" parent="VBoxContainer/MarginContainer/Question" instance=ExtResource("7_okbwg")]

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Answer1" type="Label" parent="VBoxContainer/HBoxContainer"]
modulate = Color(0.52, 1, 0.52, 1)
layout_mode = 2
size_flags_horizontal = 6
mouse_filter = 1
mouse_default_cursor_shape = 2
theme = ExtResource("4_1r6k0")
theme_override_font_sizes/font_size = 40
text = "27"

[node name="OnHover" type="Label" parent="VBoxContainer/HBoxContainer/Answer1"]
layout_mode = 2
offset_right = 44.0
offset_bottom = 48.0
size_flags_horizontal = 6
mouse_filter = 1
mouse_default_cursor_shape = 2
theme = ExtResource("4_1r6k0")
theme_override_colors/font_color = Color(0.98, 0.932797, 0.8134, 1)
theme_override_font_sizes/font_size = 40
text = "27"

[node name="Clickable" parent="VBoxContainer/HBoxContainer/Answer1" node_paths=PackedStringArray("show_on_hover") instance=ExtResource("5_mxpw4")]
show_on_hover = NodePath("../OnHover")

[node name="Answer2" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
mouse_filter = 1
mouse_default_cursor_shape = 2
theme = ExtResource("4_1r6k0")
theme_override_font_sizes/font_size = 40
text = "27"

[node name="OnHover" type="Label" parent="VBoxContainer/HBoxContainer/Answer2"]
layout_mode = 2
offset_right = 44.0
offset_bottom = 48.0
size_flags_horizontal = 6
mouse_filter = 1
mouse_default_cursor_shape = 2
theme = ExtResource("4_1r6k0")
theme_override_colors/font_color = Color(0.98, 0.932797, 0.8134, 1)
theme_override_font_sizes/font_size = 40
text = "27"

[node name="Clickable" parent="VBoxContainer/HBoxContainer/Answer2" node_paths=PackedStringArray("show_on_hover") instance=ExtResource("5_mxpw4")]
show_on_hover = NodePath("../OnHover")

[node name="Answer3" type="Label" parent="VBoxContainer/HBoxContainer"]
modulate = Color(1, 0.41, 0.419833, 1)
layout_mode = 2
size_flags_horizontal = 6
mouse_filter = 1
mouse_default_cursor_shape = 2
theme = ExtResource("4_1r6k0")
theme_override_font_sizes/font_size = 40
text = "27"

[node name="OnHover" type="Label" parent="VBoxContainer/HBoxContainer/Answer3"]
layout_mode = 2
offset_right = 44.0
offset_bottom = 48.0
size_flags_horizontal = 6
mouse_filter = 1
mouse_default_cursor_shape = 2
theme = ExtResource("4_1r6k0")
theme_override_colors/font_color = Color(0.98, 0.932797, 0.8134, 1)
theme_override_font_sizes/font_size = 40
text = "27"

[node name="Clickable" parent="VBoxContainer/HBoxContainer/Answer3" node_paths=PackedStringArray("show_on_hover") instance=ExtResource("5_mxpw4")]
show_on_hover = NodePath("../OnHover")

[node name="WinScreen" parent="." instance=ExtResource("15_f3ob4")]
layout_mode = 1

[connection signal="Flash" from="Game 30" to="Flasher/EffectTransition" method="flash_modulate"]
[connection signal="OnNextQuestion" from="Game 30" to="VBoxContainer/MarginContainer/Question/Highlight" method="highlight"]
[connection signal="OnNextQuestion" from="Game 30" to="Game 30/SoundQuestion" method="play"]
[connection signal="OnWon" from="Game 30" to="WinScreen" method="show_screen"]
[connection signal="UpdateQuestion" from="Game 30" to="VBoxContainer/MarginContainer/Question" method="set_text"]
[connection signal="UpdateQuestionCounter" from="Game 30" to="QuestionCounter" method="set_text"]
